Fix EOL detection issues

Use QStream::read to read next character for EOL detection
Avoid QStream::pos due to severe speed issues

BUG:448353
BUG:450225
FIXED-IN:1.9.5