src/SourceData.cpp
@@ -576,7 +576,7 @@ bool SourceData::FileData::preprocess(QTextCodec* pEncoding, bool removeComments
         return false;
 
     QString line;
-    QChar curChar;
+    QChar curChar, prevChar = 0;
     LineCount lineCount = 0;
     QtSizeType lastOffset = 0;
     FileOffset skipBytes = 0;
@@ -604,7 +604,7 @@ bool SourceData::FileData::preprocess(QTextCodec* pEncoding, bool removeComments
     assert(m_unicodeBuf->length() == 0);
 
     mHasEOLTermination = false;
-
+    bool skipNextRead = false;
     while(!ts.atEnd())
     {
         line.clear();
@@ -614,7 +614,12 @@ bool SourceData::FileData::preprocess(QTextCodec* pEncoding, bool removeComments
             return false;
         }
 
-        curChar = ts.read(1).unicode()[0];
+        if(!skipNextRead){
+            prevChar = curChar;
+            curChar = ts.read(1).unicode()[0];
+        }
+        else
+            skipNextRead = false;
 
         QtSizeType  firstNonwhite = 0;
         bool        foundNonWhite = false;
@@ -641,6 +646,7 @@ bool SourceData::FileData::preprocess(QTextCodec* pEncoding, bool removeComments
             if(ts.atEnd())
                 break;
 
+            prevChar = curChar;
             curChar = ts.read(1).unicode()[0];
         }
 
@@ -652,20 +658,16 @@ bool SourceData::FileData::preprocess(QTextCodec* pEncoding, bool removeComments
             case '\r':
                 if((FileOffset)lastOffset < mDataSize)
                 {
-                    //workaround for lack of peak API in QTextStream.
-                    quint64 j;
-                    for(j = 0; j < 4 && lastOffset + j < mDataSize; ++j)
-                    {
-                        if(m_pBuf[ts.pos() + j] != '\0')
-                            break;
-                    }
+                    prevChar = curChar;
+                    curChar = ts.read(1).unicode()[0];
 
-                    if(m_pBuf[ts.pos() + j] == '\n')
+                    if(curChar == '\n')
                     {
-                        curChar = ts.read(1).unicode()[0];
                         vOrigDataLineEndStyle.push_back(eLineEndStyleDos);
                         break;
                     }
+                    //work around for lack of seek API in QTextStream
+                    skipNextRead = true;
                 }
 
                 //old mac style ending.
